--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 2,
+  "bracketSpacing": true,
+  "proseWrap": "preserve",
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false
 }
