--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
+    "test": "npm-run-all lint:* test:*",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
-    "start": "ember serve",
-    "test": "npm-run-all lint:* test:*",
+    "fix-lint": "eslint . --fix",
+    "start": "ember s --e=development",
     "test:ember": "ember test"
   },
   "devDependencies": {
@@ -44,8 +45,8 @@
     "ember-source": "~3.17.0",
     "ember-template-lint": "^2.4.0",
     "ember-welcome-page": "^4.0.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-ember": "^7.10.1",
+    "eslint": "6.8.0",
+    "eslint-plugin-ember": "^8.4.0",
     "eslint-plugin-node": "^11.0.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
@@ -58,6 +59,8 @@
     "edition": "octane"
   },
   "dependencies": {
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.4"
   }
 }
