--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.1.0",
@@ -33,6 +34,7 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^5.3.1",
     "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-postcss": "^7.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^3.0.0",
     "ember-data": "~3.17.0",
@@ -51,7 +53,9 @@
     "eslint-plugin-node": "^11.0.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.1.0"
+    "postcss-import": "^14.0.2",
+    "qunit-dom": "^1.1.0",
+    "tailwindcss": "^2.1.2"
   },
   "engines": {
     "node": "10.* || >= 12"
@@ -60,6 +64,7 @@
     "edition": "octane"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.5",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.5"
