--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
+    "@fortawesome/ember-fontawesome": "^0.2.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fullhuman/postcss-purgecss": "^4.0.3",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
