update node versions to fix build issue

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "tailwindcss": "^2.1.2"
   },
   "engines": {
-    "node": "10.* || >= 12"
+    "node": ">= 12"
   },
   "ember": {
     "edition": "octane"
