feat: configure about page (wip)

--- a/_config.yml
+++ b/_config.yml
@@ -158,14 +158,14 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:mateusvalgueiro@gmail.com"
-    # - label: "Website"
-    #   icon: "fas fa-fw fa-link"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/mateusvalgueiro"
-    # - label: "Facebook"
-    #   icon: "fab fa-fw fa-facebook-square"
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
@@ -331,6 +331,13 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      #comments: true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
